# nanovg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen_mnvg_bitcode.sh
.github/workflows/: ci.yml  shaders.yml
examples/: demo.c  example_d3d11.c  example_vulkan.c  example_vulkan_min_no_glfw.c  perf.c  vulkan_util.h
include/nanovg/: dk_renderer.hpp  nanovg.h  nanovg_d3d11.h  nanovg_dk.h  nanovg_gl.h  nanovg_gl_utils.h  nanovg_mtl.h  nanovg_ps4.h  nanovg_vk.h
include/nanovg/mnvg_bitcode/: macos.h
shaders/d3d11/: D3D11BlurPixelShader.h  D3D11BlurPixelShader.hlsl  D3D11BlurVertexShader.h  D3D11BlurVertexShader.hlsl  D3D11PixelShader.h  D3D11PixelShaderAA.h  D3D11VertexShader.h
shaders/metal/: ios.h  macos.h  nanovg_mtl_shaders.metal  simulator.h  tvos.h
src/: nanovg.c
src/deko3d/: dk_renderer.cpp
src/metal/: nanovg_mtl.m
tools/: d3d_shaders.bat  d3d_shaders.ps1
